--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-fluid mb-3" alt="user" />
                             </div>
                             <div class="col-lg-9">
-                                <h4>John Doe</h4>
-                                <p>www.example.com</p>
+                                <h4>Mr. John Doe</h4>
+                                <p>09172005000</p>
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather icon-message-square mr-2"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather icon-phone mr-2"></i>Call Now</button>
@@ -32,20 +32,20 @@
                                     <table class="table table-borderless mb-0">
                                         <tbody>
                                         <tr>
-                                            <th scope="row" class="p-1">Category :</th>
-                                            <td class="p-1">Web Development</td>
+                                            <th scope="row" class="p-1">Email :</th>
+                                            <td class="p-1">example@gmail.com</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row" class="p-1">Work Hrs :</th>
-                                            <td class="p-1">58</td>
+                                            <th scope="row" class="p-1">Gender :</th>
+                                            <td class="p-1">Male</td>
                                         </tr>
                                         <tr>
                                             <th scope="row" class="p-1">Country :</th>
                                             <td class="p-1">Italy</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row" class="p-1">Email ID :</th>
-                                            <td class="p-1">demo@mail.com</td>
+                                            <th scope="row" class="p-1">City :</th>
+                                            <td class="p-1">Shiraz</td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -65,8 +65,8 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="img-fluid mb-3" alt="user" />
                             </div>
                             <div class="col-lg-9">
-                                <h4>Mark Wood</h4>
-                                <p>www.example.com</p>
+                                <h4>Mr. Mark Wood</h4>
+                                <p>09172004000</p>
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather icon-message-square mr-2"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather icon-phone mr-2"></i>Call Now</button>
@@ -75,20 +75,20 @@
                                     <table class="table table-borderless mb-0">
                                         <tbody>
                                         <tr>
-                                            <th scope="row" class="p-1">Category :</th>
-                                            <td class="p-1">Web Designing</td>
+                                            <th scope="row" class="p-1">Email :</th>
+                                            <td class="p-1">example@gmail.com</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row" class="p-1">Work Hrs :</th>
-                                            <td class="p-1">95</td>
+                                            <th scope="row" class="p-1">Gender :</th>
+                                            <td class="p-1">Male</td>
                                         </tr>
                                         <tr>
                                             <th scope="row" class="p-1">Country :</th>
                                             <td class="p-1">USA</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row" class="p-1">Email ID :</th>
-                                            <td class="p-1">demo@mail.com</td>
+                                            <th scope="row" class="p-1">City :</th>
+                                            <td class="p-1">Shiraz</td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -108,8 +108,8 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="img-fluid mb-3" alt="user" />
                             </div>
                             <div class="col-lg-9">
-                                <h4>Kate Perry</h4>
-                                <p>www.example.com</p>
+                                <h4>Ms. Kate Perry</h4>
+                                <p>09173003000</p>
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather icon-message-square mr-2"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather icon-phone mr-2"></i>Call Now</button>
@@ -118,20 +118,20 @@
                                     <table class="table table-borderless mb-0">
                                         <tbody>
                                         <tr>
-                                            <th scope="row" class="p-1">Category :</th>
-                                            <td class="p-1">UI Designing</td>
+                                            <th scope="row" class="p-1">Email :</th>
+                                            <td class="p-1">example@gmail.com</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row" class="p-1">Work Hrs :</th>
-                                            <td class="p-1">110</td>
+                                            <th scope="row" class="p-1">Gender :</th>
+                                            <td class="p-1">Female</td>
                                         </tr>
                                         <tr>
                                             <th scope="row" class="p-1">Country :</th>
                                             <td class="p-1">Australia</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row" class="p-1">Email ID :</th>
-                                            <td class="p-1">demo@mail.com</td>
+                                            <th scope="row" class="p-1">City :</th>
+                                            <td class="p-1">Shiraz</td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -151,8 +151,8 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar6.png" class="img-fluid mb-3" alt="user" />
                             </div>
                             <div class="col-lg-9">
-                                <h4>Slevenka Rajaswki</h4>
-                                <p>www.example.com</p>
+                                <h4>Mr. Slevenka Rajaswki</h4>
+                                <p>09172003000</p>
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather icon-message-square mr-2"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather icon-phone mr-2"></i>Call Now</button>
@@ -161,20 +161,20 @@
                                     <table class="table table-borderless mb-0">
                                         <tbody>
                                         <tr>
-                                            <th scope="row" class="p-1">Category :</th>
-                                            <td class="p-1">App Development</td>
+                                            <th scope="row" class="p-1">Email :</th>
+                                            <td class="p-1">example@gmail.com</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row" class="p-1">Work Hrs :</th>
-                                            <td class="p-1">225</td>
+                                            <th scope="row" class="p-1">Gender :</th>
+                                            <td class="p-1">Male</td>
                                         </tr>
                                         <tr>
                                             <th scope="row" class="p-1">Country :</th>
                                             <td class="p-1">Germany</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row" class="p-1">Email ID :</th>
-                                            <td class="p-1">demo@mail.com</td>
+                                            <th scope="row" class="p-1">City :</th>
+                                            <td class="p-1">Shiraz</td>
                                         </tr>
                                         </tbody>
                                     </table>
