--- a/edit.html
+++ b/edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
-    <title>Create contact</title>
+    <title>Edit contact</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -20,28 +20,28 @@
                     <div class="row">
                         <div class="col-lg-3 text-center">
                             <label for="avatar">
-                                <img src="images/default.jpg" class="img-fluid mb-3" alt="user" />
+                                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-fluid mb-3" alt="user" />
                             </label>
                             <input type="file" class="form-control-file" id="avatar">
                         </div>
                         <div class="col-lg-9">
                             <form action="">
                                 <div class="form-group">
-                                    <input class="form-control form-control-plaintext" type="text" placeholder="Name">
-                                    <input class="form-control form-control-sm mt-2 form-control-plaintext" type="text" placeholder="Phone number">
+                                    <input class="form-control form-control-plaintext" type="text" placeholder="Name" value="Mr. John Doe">
+                                    <input class="form-control form-control-sm mt-2 form-control-plaintext" type="text" placeholder="Phone number" value="09172005000">
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
                                         <tbody>
                                         <tr>
                                             <th scope="row" class="p-1"><label for="email" class="mb-0">Email</label></th>
-                                            <td class="p-1"><input type="text" class="form-control-plaintext py-0" id="email" placeholder="email@example.com"></td>
+                                            <td class="p-1"><input type="text" class="form-control-plaintext py-0" id="email" placeholder="email@example.com" value="email@example.com"></td>
                                         </tr>
                                         <tr>
                                             <th scope="row" class="p-1"><label class="mb-0">Gender</label></th>
                                             <td class="p-1">
                                                 <div class="form-check form-check-inline">
-                                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="male">
+                                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="male" checked>
                                                     <label class="form-check-label" for="inlineRadio1">Male</label>
                                                 </div>
                                                 <div class="form-check form-check-inline">
@@ -52,11 +52,11 @@
                                         </tr>
                                         <tr>
                                             <th scope="row" class="p-1"><label for="country" class="mb-0">Country</label></th>
-                                            <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="country" placeholder="country"></td>
+                                            <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="country" placeholder="country" value="Italy"></td>
                                         </tr>
                                         <tr>
                                             <th scope="row" class="p-1"><label for="city" class="mb-0">City</label></th>
-                                            <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="city" placeholder="city"></td>
+                                            <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="city" placeholder="city" value="Shiraz"></td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Create</button>
+                        <button type="submit" class="btn btn-primary">Update</button>
                     </div>
                 </div>
             </div>
