fix father-icon pack

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                                 <h4>Mr. John Doe</h4>
                                 <p>09172005000</p>
                                 <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather icon-message-square mr-2"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather icon-phone mr-2"></i>Call Now</button>
+                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
+                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -68,8 +68,8 @@
                                 <h4>Mr. Mark Wood</h4>
                                 <p>09172004000</p>
                                 <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather icon-message-square mr-2"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather icon-phone mr-2"></i>Call Now</button>
+                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
+                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -111,8 +111,8 @@
                                 <h4>Ms. Kate Perry</h4>
                                 <p>09173003000</p>
                                 <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather icon-message-square mr-2"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather icon-phone mr-2"></i>Call Now</button>
+                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
+                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -154,8 +154,8 @@
                                 <h4>Mr. Slevenka Rajaswki</h4>
                                 <p>09172003000</p>
                                 <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather icon-message-square mr-2"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather icon-phone mr-2"></i>Call Now</button>
+                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
+                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -187,5 +187,9 @@
             <!-- End col -->
         </div>
     </div>
+    
+    <script>
+        feather.replace()
+    </script>
 </body>
 </html>
