delete button ui

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                                 <h4>Mr. John Doe</h4>
                                 <p>09172005000</p>
                                 <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
+                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-1" data-feather="message-square"></i>Message</button>
+                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-1" data-feather="phone"></i>Call Now</button>
+                                    <button type="button" class="btn btn-light"><i class="feather" data-feather="trash-2"></i></button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -70,6 +71,7 @@
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
+                                    <button type="button" class="btn btn-light"><i class="feather" data-feather="trash-2"></i></button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -113,6 +115,7 @@
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
+                                    <button type="button" class="btn btn-light"><i class="feather" data-feather="trash-2"></i></button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -156,6 +159,7 @@
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
+                                    <button type="button" class="btn btn-light"><i class="feather" data-feather="trash-2"></i></button>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
