delete button functioanality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather mr-1" data-feather="message-square"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather mr-1" data-feather="phone"></i>Call Now</button>
-                                    <button type="button" class="btn btn-light"><i class="feather" data-feather="trash-2"></i></button>
+                                    <button type="button" class="btn btn-light" onclick="
+                                        if(confirm (`آیا از حذف Mr. John Doe مطمئن هستید؟`)) {
+                                            document.querySelector('#deleteForm_1').submit();
+                                        }
+                                    "><i class="feather" data-feather="trash-2"></i></button>
+                                    <form action="delete/1" method="post" id="deleteForm_1" hidden></form>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -71,7 +76,12 @@
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
-                                    <button type="button" class="btn btn-light"><i class="feather" data-feather="trash-2"></i></button>
+                                    <button type="button" class="btn btn-light" onclick="
+                                        if(confirm (`آیا از حذف Mr. Mark Wood مطمئن هستید؟`)) {
+                                            document.querySelector('#deleteForm_2').submit();
+                                        }
+                                    "><i class="feather" data-feather="trash-2"></i></button>
+                                    <form action="delete/2" method="post" id="deleteForm_2" hidden></form>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -115,7 +125,12 @@
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
-                                    <button type="button" class="btn btn-light"><i class="feather" data-feather="trash-2"></i></button>
+                                    <button type="button" class="btn btn-light" onclick="
+                                        if(confirm (`آیا از حذف Ms. Kate Perry مطمئن هستید؟`)) {
+                                            document.querySelector('#deleteForm_3').submit();
+                                        }
+                                    "><i class="feather" data-feather="trash-2"></i></button>
+                                    <form action="delete/3" method="post" id="deleteForm_3" hidden></form>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
@@ -159,7 +174,12 @@
                                 <div class="button-list mt-4 mb-3">
                                     <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
                                     <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
-                                    <button type="button" class="btn btn-light"><i class="feather" data-feather="trash-2"></i></button>
+                                    <button type="button" class="btn btn-light" onclick="
+                                        if(confirm (`آیا از حذف Mr. Slevenka Rajaswki مطمئن هستید؟`)) {
+                                            document.querySelector('#deleteForm_4').submit();
+                                        }
+                                    "><i class="feather" data-feather="trash-2"></i></button>
+                                    <form action="delete/4" method="post" id="deleteForm_4" hidden></form>
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-borderless mb-0">
