--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,21 @@
 </head>
 <body>
     <div class="container">
+        <!-- Navbar -->
+        <div class="row">
+            <div class="col-md-12">
+                <div class="top-breadcrumb">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="mr-4"><a href="index.html" class=" text-dark"><i class="feather" data-feather="list"></i></a></li>
+                            <li class="mr-4"><a href="index.html" class=" text-dark">Contacts</a></li>
+                            <li class="mr-4"><a href="create.html" class=" text-dark"><i class="feather" data-feather="plus"></i></a></li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        
         <div class="row">
             <!-- Start col -->
             <div class="col-lg-6">
