--- a/create.html
+++ b/create.html
@@ -1,4 +1,4 @@
-!<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,66 +11,85 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.27.0/feather.min.js" integrity="sha256-xHkYry2yRjy99N8axsS5UL/xLHghksrFOGKm9HvFZIs=" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <!-- Start col -->
-        <div class="col-lg-12">
-            <div class="card m-b-30">
-                <div class="card-body py-5">
-                    <div class="row">
-                        <div class="col-lg-3 text-center">
-                            <label for="avatar">
-                                <img src="images/default.jpg" class="img-fluid mb-3" alt="user" />
-                            </label>
-                            <input type="file" class="form-control-file" id="avatar">
+    <div class="container">
+        <!-- Navbar -->
+        <div class="row">
+            <div class="col-md-12">
+                <div class="top-breadcrumb">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="mr-4"><a href="index.html" class=" text-dark"><i class="feather" data-feather="arrow-left"></i></a></li>
+                            <li class="mr-4"><a href="index.html" class=" text-dark">Contacts</a></li>
+                            <li class="mr-4"><a href="create.html" class=" text-dark"><i class="feather" data-feather="plus"></i></a></li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <!-- Start col -->
+            <div class="col-lg-12">
+                <div class="card m-b-30">
+                    <div class="card-body py-5">
+                        <div class="row">
+                            <div class="col-lg-3 text-center">
+                                <label for="avatar">
+                                    <img src="images/default.jpg" class="img-fluid mb-3" alt="user" />
+                                </label>
+                                <input type="file" class="form-control-file" id="avatar">
+                            </div>
+                            <div class="col-lg-9">
+                                <form action="">
+                                    <div class="form-group">
+                                        <input class="form-control form-control-plaintext" type="text" placeholder="Name">
+                                        <input class="form-control form-control-sm mt-2 form-control-plaintext" type="text" placeholder="Phone number">
+                                    </div>
+                                    <div class="table-responsive">
+                                        <table class="table table-borderless mb-0">
+                                            <tbody>
+                                            <tr>
+                                                <th scope="row" class="p-1"><label for="email" class="mb-0">Email</label></th>
+                                                <td class="p-1"><input type="text" class="form-control-plaintext py-0" id="email" placeholder="email@example.com"></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row" class="p-1"><label class="mb-0">Gender</label></th>
+                                                <td class="p-1">
+                                                    <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="male">
+                                                        <label class="form-check-label" for="inlineRadio1">Male</label>
+                                                    </div>
+                                                    <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="female">
+                                                        <label class="form-check-label" for="inlineRadio2">Female</label>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row" class="p-1"><label for="country" class="mb-0">Country</label></th>
+                                                <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="country" placeholder="country"></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row" class="p-1"><label for="city" class="mb-0">City</label></th>
+                                                <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="city" placeholder="city"></td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
-                        <div class="col-lg-9">
-                            <form action="">
-                                <div class="form-group">
-                                    <input class="form-control form-control-plaintext" type="text" placeholder="Name">
-                                    <input class="form-control form-control-sm mt-2 form-control-plaintext" type="text" placeholder="Phone number">
-                                </div>
-                                <div class="table-responsive">
-                                    <table class="table table-borderless mb-0">
-                                        <tbody>
-                                        <tr>
-                                            <th scope="row" class="p-1"><label for="email" class="mb-0">Email</label></th>
-                                            <td class="p-1"><input type="text" class="form-control-plaintext py-0" id="email" placeholder="email@example.com"></td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1"><label class="mb-0">Gender</label></th>
-                                            <td class="p-1">
-                                                <div class="form-check form-check-inline">
-                                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="male">
-                                                    <label class="form-check-label" for="inlineRadio1">Male</label>
-                                                </div>
-                                                <div class="form-check form-check-inline">
-                                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="female">
-                                                    <label class="form-check-label" for="inlineRadio2">Female</label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1"><label for="country" class="mb-0">Country</label></th>
-                                            <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="country" placeholder="country"></td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1"><label for="city" class="mb-0">City</label></th>
-                                            <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="city" placeholder="city"></td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </form>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Create</button>
                         </div>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Create</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    
+    <script>
+        feather.replace()
+    </script>
 </body>
 </html>
