--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Contacts list</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script src="js/jquery3.6.0.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.27.0/feather.min.js" integrity="sha256-xHkYry2yRjy99N8axsS5UL/xLHghksrFOGKm9HvFZIs=" crossorigin="anonymous"></script>
 </head>
@@ -26,209 +28,10 @@
                 </div>
             </div>
         </div>
-        
-        <div class="row">
-            <!-- Start col -->
-            <div class="col-lg-6">
-                <div class="card m-b-30">
-                    <div class="card-body py-5">
-                        <div class="row">
-                            <div class="col-lg-3 text-center">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-fluid mb-3" alt="user" />
-                            </div>
-                            <div class="col-lg-9">
-                                <h4>Mr. John Doe</h4>
-                                <p>09172005000</p>
-                                <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-1" data-feather="message-square"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-1" data-feather="phone"></i>Call Now</button>
-                                    <button type="button" class="btn btn-light" onclick="
-                                        if(confirm (`آیا از حذف Mr. John Doe مطمئن هستید؟`)) {
-                                            document.querySelector('#deleteForm_1').submit();
-                                        }
-                                    "><i class="feather" data-feather="trash-2"></i></button>
-                                    <form action="delete/1" method="post" id="deleteForm_1" hidden></form>
-                                </div>
-                                <div class="table-responsive">
-                                    <table class="table table-borderless mb-0">
-                                        <tbody>
-                                        <tr>
-                                            <th scope="row" class="p-1">Email :</th>
-                                            <td class="p-1">example@gmail.com</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">Gender :</th>
-                                            <td class="p-1">Male</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">Country :</th>
-                                            <td class="p-1">Italy</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">City :</th>
-                                            <td class="p-1">Shiraz</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End col -->
-            <!-- Start col -->
-            <div class="col-lg-6">
-                <div class="card m-b-30">
-                    <div class="card-body py-5">
-                        <div class="row">
-                            <div class="col-lg-3 text-center">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="img-fluid mb-3" alt="user" />
-                            </div>
-                            <div class="col-lg-9">
-                                <h4>Mr. Mark Wood</h4>
-                                <p>09172004000</p>
-                                <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
-                                    <button type="button" class="btn btn-light" onclick="
-                                        if(confirm (`آیا از حذف Mr. Mark Wood مطمئن هستید؟`)) {
-                                            document.querySelector('#deleteForm_2').submit();
-                                        }
-                                    "><i class="feather" data-feather="trash-2"></i></button>
-                                    <form action="delete/2" method="post" id="deleteForm_2" hidden></form>
-                                </div>
-                                <div class="table-responsive">
-                                    <table class="table table-borderless mb-0">
-                                        <tbody>
-                                        <tr>
-                                            <th scope="row" class="p-1">Email :</th>
-                                            <td class="p-1">example@gmail.com</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">Gender :</th>
-                                            <td class="p-1">Male</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">Country :</th>
-                                            <td class="p-1">USA</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">City :</th>
-                                            <td class="p-1">Shiraz</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End col -->
-            <!-- Start col -->
-            <div class="col-lg-6">
-                <div class="card m-b-30">
-                    <div class="card-body py-5">
-                        <div class="row">
-                            <div class="col-lg-3 text-center">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="img-fluid mb-3" alt="user" />
-                            </div>
-                            <div class="col-lg-9">
-                                <h4>Ms. Kate Perry</h4>
-                                <p>09173003000</p>
-                                <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
-                                    <button type="button" class="btn btn-light" onclick="
-                                        if(confirm (`آیا از حذف Ms. Kate Perry مطمئن هستید؟`)) {
-                                            document.querySelector('#deleteForm_3').submit();
-                                        }
-                                    "><i class="feather" data-feather="trash-2"></i></button>
-                                    <form action="delete/3" method="post" id="deleteForm_3" hidden></form>
-                                </div>
-                                <div class="table-responsive">
-                                    <table class="table table-borderless mb-0">
-                                        <tbody>
-                                        <tr>
-                                            <th scope="row" class="p-1">Email :</th>
-                                            <td class="p-1">example@gmail.com</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">Gender :</th>
-                                            <td class="p-1">Female</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">Country :</th>
-                                            <td class="p-1">Australia</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">City :</th>
-                                            <td class="p-1">Shiraz</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End col -->
-            <!-- Start col -->
-            <div class="col-lg-6">
-                <div class="card m-b-30">
-                    <div class="card-body py-5">
-                        <div class="row">
-                            <div class="col-lg-3 text-center">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar6.png" class="img-fluid mb-3" alt="user" />
-                            </div>
-                            <div class="col-lg-9">
-                                <h4>Mr. Slevenka Rajaswki</h4>
-                                <p>09172003000</p>
-                                <div class="button-list mt-4 mb-3">
-                                    <button type="button" class="btn btn-primary-rgba"><i class="feather mr-2" data-feather="message-square"></i>Message</button>
-                                    <button type="button" class="btn btn-success-rgba"><i class="feather mr-2" data-feather="phone"></i>Call Now</button>
-                                    <button type="button" class="btn btn-light" onclick="
-                                        if(confirm (`آیا از حذف Mr. Slevenka Rajaswki مطمئن هستید؟`)) {
-                                            document.querySelector('#deleteForm_4').submit();
-                                        }
-                                    "><i class="feather" data-feather="trash-2"></i></button>
-                                    <form action="delete/4" method="post" id="deleteForm_4" hidden></form>
-                                </div>
-                                <div class="table-responsive">
-                                    <table class="table table-borderless mb-0">
-                                        <tbody>
-                                        <tr>
-                                            <th scope="row" class="p-1">Email :</th>
-                                            <td class="p-1">example@gmail.com</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">Gender :</th>
-                                            <td class="p-1">Male</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">Country :</th>
-                                            <td class="p-1">Germany</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="p-1">City :</th>
-                                            <td class="p-1">Shiraz</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End col -->
+
+        <div class="row" id="contacts-container">
+            <img src="images/spinner.gif" alt="spinner" id="spinner" style="width: 50px; opacity: 50%" class="mx-auto mt-4">
         </div>
     </div>
-    
-    <script>
-        feather.replace()
-    </script>
 </body>
 </html>
