--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
         <div class="row" id="contacts-container">
             <img src="images/spinner.gif" alt="spinner" id="spinner" style="width: 50px; opacity: 50%" class="mx-auto mt-4">
         </div>
+
+        <div class="row">
+            <div class="container text-center">
+                <nav>
+                    <ul class="pagination pagination-lg">
+                        <li class="page-item"><a class="page-link" href="?page=1">1</a></li>
+                        <li class="page-item"><a class="page-link" href="?page=2">2</a></li>
+                        <li class="page-item"><a class="page-link" href="?page=3">3</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </div>
 </body>
 </html>
