--- a/create.html
+++ b/create.html
@@ -33,7 +33,7 @@
             <!-- Start col -->
             <div class="col-lg-12">
                 <div class="card m-b-30">
-                    <form action="https://webhook.site/14e51441-12f1-4efa-8bfc-5334838e1bc2" method="post">
+                    <form action="https://webhook.site/14e51441-12f1-4efa-8bfc-5334838e1bc2" method="post" id="createForm">
                         <div class="card-body py-5">
                             <div class="row">
                                 <div class="col-lg-3 text-center">
@@ -97,7 +97,7 @@
                                 </div>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Create</button>
+                                <button type="submit" class="btn btn-primary" id="create">Create</button>
                             </div>
                         </div>
                     </div>
@@ -105,6 +105,32 @@
             </div>
         </div>
     </div>
+    
+    <script>
+        $("#createForm").submit(function(e) {
+            e.preventDefault();
+
+            let form = $(this);
+            let url = form.attr('action');
+
+            $.ajax({
+                type: "POST",
+                url: url,
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                data: form.serialize(),
+                success: function(data) {
+                    let Done = () => `
+                        <img src="images/tick.png" alt="tick" style="width: 30px" class="d-inline-block"/>
+                        <p class="d-inline-block">ثبت شد</p>
+                    `;
+                    $("#create").replaceWith(Done());
+                },
+                error: () => alert('Something went wrong!')
+            });
+        });
+    </script>
     
     <script>
         feather.replace()
