--- a/edit.html
+++ b/edit.html
@@ -106,14 +106,11 @@
 
     <script>
         $("#editForm").submit(function(e) {
-            e.preventDefault(); // avoid to execute the actual submit of the form.
+            e.preventDefault();
 
             let form = $(this);
             let url = form.attr('action');
 
-
-
-            console.log(form)
             $.ajax({
                 type: "POST",
                 url: url,
@@ -121,17 +118,15 @@
                     'Content-Type': 'application/x-www-form-urlencoded'
                 },
                 data: form.serialize(),
-                success: function(data, status) {
-                    if (status === 'success') { // to make sure it's a 200, not 2xx
-                        var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-                        createdAt = new Date(JSON.parse(data).createdAt * 1000).toLocaleDateString("fa-IR", options)
+                success: function(data) {
+                    var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+                    createdAt = new Date(JSON.parse(data).createdAt * 1000).toLocaleDateString("fa-IR", options)
 
-                        let Done = (createdAt) => `
-                            <img src="images/tick.png" alt="tick" style="width: 30px" class="d-inline-block"/>
-                            <p class="d-inline-block">بروزرسانی شد: ${createdAt}</p>
-                        `;
-                        $("#update").replaceWith(Done(createdAt));
-                    }
+                    let Done = (createdAt) => `
+                        <img src="images/tick.png" alt="tick" style="width: 30px" class="d-inline-block"/>
+                        <p class="d-inline-block">بروزرسانی شد: ${createdAt}</p>
+                    `;
+                    $("#update").replaceWith(Done(createdAt));
                 },
                 error: () => alert('Something went wrong!')
             });
